--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,68 @@
-appnope==0.1.0
-backcall==0.1.0
-beautifulsoup4==4.6.3
-bleach==2.1.4
-certifi==2018.8.24
+astroid==2.4.2
+atomicwrites==1.4.0
+attrs==20.3.0
+awslogs==0.14.0
+Babel==2.9.0
+boto3==1.16.10
+botocore==1.19.10
+cachetools==4.1.1
+certifi==2020.6.20
 chardet==3.0.4
 Click==7.0
-cycler==0.10.0
-decorator==4.3.0
-defusedxml==0.5.0
-entrypoints==0.2.3
-Flask==1.0.2
-google==2.0.1
-google-cloud==0.34.0
-gtfs-realtime-bindings==0.0.5
-html5lib==1.0.1
-idna==2.7
-ipykernel==5.0.0
-ipython==7.1.1
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
+colorama==0.4.3
+Deprecated==1.2.12
+Flask==1.1.1
+Flask-Babel==2.0.0
+flask-gridify==0.2.0
+Flask-Restless==0.17.0
+Flask-SQLAlchemy==2.4.1
+Flask-Table==0.5.0
+google-api-core==1.21.0
+google-api-python-client==1.9.3
+google-auth==1.18.0
+google-auth-httplib2==0.0.4
+google-auth-oauthlib==0.4.1
+googleapis-common-protos==1.52.0
+greenlet==1.0.0
+gunicorn==20.1.0
+httplib2==0.18.1
+idna==2.10
+iniconfig==1.1.1
+isort==4.3.21
 itsdangerous==1.1.0
-jedi==0.12.1
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-kiwisolver==1.0.1
+Jinja2==2.11.1
+jmespath==0.10.0
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
-matplotlib==2.2.2
-mistune==0.8.3
-nbconvert==5.4.0
-nbformat==4.4.0
-nltk==3.3
-notebook==5.7.0
-numpy==1.15.3
-oauthlib==2.1.0
-pandas==0.23.3
-pandocfilters==1.4.2
-parso==0.3.1
-pexpect==4.6.0
-pickleshare==0.7.5
-prometheus-client==0.3.1
-prompt-toolkit==2.0.7
-protobuf==3.6.1
-protobuf-to-dict==0.1.0
-ptyprocess==0.6.0
-Pygments==2.2.0
-pyparsing==2.2.0
-PySocks==1.6.8
+mccabe==0.6.1
+mimerender==0.6.0
+oauthlib==3.1.0
+packaging==20.9
+pluggy==0.13.1
+protobuf==3.12.2
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyGithub==1.54.1
+PyJWT==1.7.1
+pylint==2.5.3
+pyparsing==2.4.7
+pytest==6.2.2
 python-dateutil==2.8.1
-pytz==2018.5
-pyzmq==17.1.2
-qtconsole==4.4.1
-requests==2.19.1
-requests-oauthlib==1.0.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-six==1.11.0
-terminado==0.8.1
-testpath==0.4.1
-tornado==5.1.1
-traitlets==4.3.2
-tweepy==3.6.0
-urllib3==1.23
-virtualenv==16.0.0
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.14.1
-widgetsnbextension==3.4.2
-xlrd==1.1.0
-setuptools==45
-gunicorn>=19.1.0
+python-mimeparse==1.6.0
+pytz==2020.1
+pyunitreport==0.1.4
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+s3transfer==0.3.3
+selenium==3.141.0
+six==1.14.0
+SQLAlchemy==1.3.13
+termcolor==1.1.0
+toml==0.10.1
+uritemplate==3.0.1
+urllib3==1.25.9
+Werkzeug==1.0.0
+wrapt==1.12.1
+setuptools==45	
