--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2020.6.20
 chardet==3.0.4
 Click==7.0
 colorama==0.4.3
+dataclasses==0D6
 Deprecated==1.2.12
 Flask==1.1.1
 Flask-Babel==2.0.0
